Completed changes to ensure music and pictures pages appear properly on mobile. Added footer with Copyright and social media links

--- a/styles/pictures.css
+++ b/styles/pictures.css
@@ -71,9 +71,18 @@ footer>p {
 	text-align: center;
 	font-family: Impact, Charcoal, sans-serif;
 	font-weight: bold;
-	font-size: 1em;
+	font-size: 0.8em;
 	color: white;
 	padding: 14px 16px;
+}
+
+footer>p>a {
+	text-decoration: none;
+	color: white;
+}
+footer>p>a>img {
+	height: 0.8em;
+	width: auto;
 }
 
 .hidden {
