--- a/styles/splash.css
+++ b/styles/splash.css
@@ -51,9 +51,18 @@ footer>p {
 	text-align: center;
 	font-family: Impact, Charcoal, sans-serif;
 	font-weight: bold;
-	font-size: 1em;
+	font-size: 0.8em;
 	color: white;
 	padding: 14px 16px;
+}
+
+footer>p>a {
+	text-decoration: none;
+	color: white;
+}
+footer>p>a>img {
+	height: 0.8em;
+	width: auto;
 }
 
 .centre {
@@ -71,6 +80,7 @@ footer>p {
 	max-width: 100%;
 	height: .1vh;
 }
+
 
 .swap {
 	display: flex;
